account security page alignment fixed

--- a/src/components/AccountPage.css
+++ b/src/components/AccountPage.css
@@ -250,6 +250,7 @@
 
 .accountpage-security-row-p {
   width: 100%;
+  text-align: left;
   font-size: 0.75rem;
   font-weight: 400;
   color: var(--color-grey-secondary);
